--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/avatar": "~1.0.3",
+    "@rn-primitives/dialog": "^1.0.3",
     "@rn-primitives/portal": "~1.0.3",
     "@rn-primitives/progress": "~1.0.3",
     "@rn-primitives/slot": "~1.0.3",
@@ -40,7 +41,7 @@
     "react-native-screens": "~3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "2.5.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
