--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rn-primitives/dialog": "^1.0.3",
     "@rn-primitives/portal": "~1.0.3",
     "@rn-primitives/progress": "~1.0.3",
+    "@rn-primitives/select": "^1.0.4",
     "@rn-primitives/slot": "~1.0.3",
     "@rn-primitives/tooltip": "~1.0.3",
     "@rn-primitives/types": "~1.0.3",
