--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-navigation-bar": "~3.0.6",
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "lucide-react-native": "^0.378.0",
@@ -43,10 +44,9 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
     "tailwind-merge": "2.5.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.7",
-    "expo-sqlite": "~14.0.6"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
